backend improvements: - extracted some properties to a common GameRules, - add new GameRulee: fleet-can-touch-each-other-diagonally - refactored FleetVerifierFactory to be even more dynamic, - replaced some guava statements with plain java,
Signed-off-by: Adrian Pedziwiatr <180254@users.noreply.github.com>